# ai-newsletter-agent

./: LICENSE  README.md  alembic.ini  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: daily_runner.py  example.env  logging_config.py  runner.py  settings.py
app/agent/: base.py  curator_agent.py  digest_agent.py  email_agent.py
app/api/: __init__.py  main.py  schemas.py
app/api/routes/: analytics.py  digests.py  health.py  pipeline.py  sources.py
app/database/: connection.py  models.py  repository.py
app/pipeline/: __init__.py  orchestrator.py
app/scrapers/: __init__.py  anthropic.py  anthropic_scraper.py  arxiv_scraper.py  base.py  deepmind_scraper.py  huggingface_scraper.py  openai_scraper.py  registry.py  youtube_scraper.py
app/services/: base.py  process_curator.py  process_digest.py  process_email.py  process_youtube.py
docker/: Dockerfile  docker-compose.yml
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Digests.jsx  Settings.jsx
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_repository.py  test_scrapers.py
